FIXED: Button now in the middle. CSS link was above Bulma link. Background working as well. Also added letter spacing.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,21 +1,28 @@
 * {
     font-family: 'Bangers', cursive;
-};
+}
 
+
+/* FIGHT STYLING PAGE */
 .button {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-};
+    transform: translate(-50%, 50%);
+}
 
-body {
-    background-image: url(../../images/images-pg-2/marvel-comic-books.jpg);
-    background-size: cover;
-};
-
-.media-content {
+.fight-background {
     background-image: url(../../images/images-pg-2/card-background.jpg);
     background-size: cover;
-};
+}
+
+h1 {
+    font-size: larger;
+    letter-spacing: .3rem;
+}
+/* .media-content {
+    opacity: .85;
+
+} */
+/* END OF FIGHT STYLING PAGE */
 /* TODO: I may design a background for our app if time permits. */
